fixed issue with users menu on mobile

--- a/public/css/notifications-menu.css
+++ b/public/css/notifications-menu.css
@@ -21,4 +21,5 @@
 }
 .notifications-menu .heading{
 	width:100%;
+	height:32px;
 }
