--- a/public/css/users-menu.css
+++ b/public/css/users-menu.css
@@ -37,4 +37,5 @@
 	width:100%;
 	padding-left:6px;
 	margin-bottom:3px;
+	height:32px;
 }
